# serializer version: 1
# name: test_variable_assignment
  dict({
    <class 'compiler.ast.StatementList'>: dict({
      'stmts': list([
        dict({
          <class 'compiler.ast.VariableDeclaration'>: dict({
            'ident': Token('IDENTIFIER', 'x'),
            'rvalue': dict({
              <class 'compiler.ast.IntLiteral'>: dict({
                'value': 1,
              }),
            }),
          }),
        }),
        dict({
          <class 'compiler.ast.Assignment'>: dict({
            'lvalue': Token('IDENTIFIER', 'x'),
            'rvalue': dict({
              <class 'compiler.ast.IntLiteral'>: dict({
                'value': 4,
              }),
            }),
          }),
        }),
      ]),
    }),
  })
# ---
# name: test_variable_assignment.1
  dict({
    <class 'compiler.ast.StatementList'>: dict({
      'fields': dict({
        'stmts': list([
          dict({
            <class 'compiler.ast.VariableDeclaration'>: dict({
              'fields': dict({
                'rvalue': dict({
                  <class 'compiler.ast.IntLiteral'>: dict({
                    'fields': dict({
                    }),
                    'type': <class 'compiler.langtypes.Int'>,
                  }),
                }),
              }),
              'type': <class 'compiler.langtypes.Int'>,
            }),
          }),
          dict({
            <class 'compiler.ast.Assignment'>: dict({
              'fields': dict({
                'rvalue': dict({
                  <class 'compiler.ast.IntLiteral'>: dict({
                    'fields': dict({
                    }),
                    'type': <class 'compiler.langtypes.Int'>,
                  }),
                }),
              }),
              'type': <class 'compiler.langtypes.Int'>,
            }),
          }),
        ]),
      }),
    }),
  })
# ---
